Add a README.md and using cloudinary to host images

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ body {
 
 .output-text {
     background-color: var(--secondary-color);
-    background-image: url("../img/Muñeco.svg");
+    background-image: url("https://res.cloudinary.com/di0cvbfdb/image/upload/v1728055152/AluraProjects/AssetsEncryptador/ouhuvuurx4mbid126gw7.svg");
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 2.4rem;
